--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,17 +1,26 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Build using Makefile",
-            "type": "shell",
-            "command": "make",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [
-                "$gcc"
-            ]
-        }
-    ]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Build Solver (Debug)",
+      "type": "cppbuild",
+      "command": "g++.exe",
+      "args": [
+        "-std=c++17",
+        "-Wall",
+        "-g",
+        "${workspaceFolder}/src/*.cpp", // This is the corrected line
+        "-o",
+        "${workspaceFolder}/rubiks_solver_debug.exe"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "problemMatcher": ["$gcc"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    }
+  ]
 }
